# ComfyUI-Kling-Direct

./: .gitignore  CHANGELOG.md  README.md  __init__.py  kling_client.py  kling_nodes.py  pyproject.toml  pytest.ini  test_load.py
shared/: __init__.py  auth.py  conversions.py  errors.py  retry.py
tests/: conftest.py  test_conversions_and_nodes.py  test_jwt_and_secrets.py  test_polling_and_retries.py
workflows/: 01_quickstart_t2v.json  02_image_to_video.json  03_video_omni.json  04_video_extend.json  05_lipsync_basic.json  06_lipsync_advanced.json  07_motion_control.json  08_avatar_gen.json  09_keyframe_video.json  10_lipsync_from_url.json  11_image_gen.json  12_image_omni.json  13_image_extend.json  14_virtual_tryon.json  15_multishot.json  16_image_recognize.json  17_audio_generate.json  18_tts.json  19_tts_advanced.json  20_video_to_audio.json  21_voice_clone.json  22_video_effects.json  23_effect_templates.json  24_upscale.json  25_camera_preset.json  26_aspect_ratio_picker.json  27_cost_estimator.json  28_task_status_poll.json  29_health_check.json  30_voice_catalog.json  31_region_selector.json  32_cloud_uploader.json  33_video_to_file.json  34_element_selector.json  35_asset_upload.json  50_music_video.json  51_avatar_narrator.json  52_lipsync_pipeline.json  53_keyframe_animation.json  54_virtual_tryon_pipeline.json  (+2 more)
